Fixed white bar on firefox and added workshop images folder

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -310,7 +310,7 @@ header {
     width: 100%;
 }
 
-.section-separator-first {
+.section-separator-first img {
     margin-top: -15%;
 }
 
